fixed text overflowing button on medium screens

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,7 +1,7 @@
 
 .pageButton{
     display: inline-block;
-    height: 6em;
+    height: 8rem;
     width: 15rem;
     min-width: 1rem;
     padding:1rem;
